gui => report and fxml view added